# mekari-mle-test

./: .gitignore  LICENSE  README.md
services/: .env.example  README.md  config.py  dockerfile  main.py  pyproject.toml
services/agentic/: __init__.py
services/agentic/nodes/: base.py
services/agentic/nodes/answer_nodes/: nodes.py
services/agentic/nodes/convertion_nodes/: nodes.py
services/agentic/nodes/guardtrail_nodes/: nodes.py  schemas.py
services/agentic/nodes/llm_nodes/: nodes.py  schemas.py
services/agentic/nodes/routing_nodes/: nodes.py  schemas.py
services/agentic/nodes/start_nodes/: nodes.py  schemas.py
services/agentic/tools/: base.py  current_time.py  fraud_query.py  fraud_rag.py
services/agentic/workflow/qna_flow/: prompt.yaml  qna_flow.py
services/business/: __init__.py
services/business/domain/: __init__.py  abc.py
services/business/domain/supabase/: connection.py
services/business/model/: health.py
services/business/model/fraud_transactions/: fraud_transactions_model.py
services/business/usecase/: __init__.py  abc.py
services/business/usecase/agentic/: agentic_usecase.py
services/business/usecase/fraud_transactions/: crud.py
services/business/usecase/health/: health_usecase.py
services/business/usecase/rag/: rag.py
services/chroma_data/: chroma.sqlite3
services/cmd/: run.py
services/contracts/: __init__.py  errors.py  response.py
services/extra/: embed_pdf.py  put_table_to_supabase.py
services/middleware/: __init__.py  request_id.py
services/transformed_data/: Bhatla_structure.json
web/: .env.example  (+3 more)
(+4 files in other folders)
